<?xml version="1.0" encoding="utf-8"?>

<com.davidstemmer.screenplay.sample.simple.view.NavigationMenuView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer"
    android:orientation="vertical"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:dividerPadding="2dp"
    android:showDividers="middle|end"
    android:background="@android:color/white"
    android:divider="@android:drawable/divider_horizontal_textfield">
    <TextView
        android:id="@+id/nav_item_welcome_scene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_item_welcome_scene"
        style="@style/NavigationDrawerItem"/>
    <TextView
        android:id="@+id/nav_item_simple_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_item_simple_navigation"
        style="@style/NavigationDrawerItem"/>
    <TextView
        android:id="@+id/nav_item_advanced_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_item_advanced_navigation"
        style="@style/NavigationDrawerItem"/>
    <TextView
        android:id="@+id/nav_item_modal_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_item_modal_navigation"
        style="@style/NavigationDrawerItem"/>
</com.davidstemmer.screenplay.sample.simple.view.NavigationMenuView>